fix top nav button on small screens

--- a/smallscreen.css
+++ b/smallscreen.css
@@ -3,10 +3,19 @@ body {
     width: auto;
 }
 
+div#titleDiv {
+    flex: 1;
+    justify-content: center;
+    display: table;
+    padding: 5% 0;
+}
+
 h1.site-title, .site-header .site-branding p.site-title {
 	font-size: 1.4rem;
     font-family: "Inter"; 
     font-weight: 900; 
+    display: table-cell;
+    vertical-align: middle;
 }
 
 #landingTitle {
@@ -15,15 +24,19 @@ h1.site-title, .site-header .site-branding p.site-title {
     line-height: 60px;
 }
 
-.add-startup-button {
+a.add-startup-button {
     border-radius: 40px;
-    padding: 10px 40px;
+    padding: 15px 20px;
     cursor: pointer;
     /* text-align: center; */
-    font-size: 10px;
+    font-size: 12px;
     font-family: 'Inter', serif;
     font-weight: 500;
     text-decoration: none;
+}
+
+#form-add-startup {
+    display: none;
 }
 
 #landingSubtitle {
@@ -47,4 +60,11 @@ h1.site-title, .site-header .site-branding p.site-title {
 .contentImage {
     width: 100%;
     height: auto;
+}
+
+nav#site-navigation {
+    flex: 1;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
